@@ -4,6 +4,7 @@ version 2.0-rc0 11-Feb-2012
 . [FIX] Particles: Fixed memory leak in fillWithEmptyQuadsFromIndex
 . [FIX] SpriteBatch: Quad extensions are public
 . [FIX] Texture2D: initWithImage renamed with initWithCGImage
+. [FIX] TMXMaps: Fixed a problem with multiple layers and multiple tile sets that could cause TMX maps to not load if rotation is used (issue #1302)
 . [FIX] Types: kCCResolutionStandard renamed to kCCResolutioniPhone
 
 version 2.0-beta2 17-Jan-2012
